Fix footer copyright text alignment to right
Target footer p instead of footer to override the gem's
text-align: center on the paragraph element.

--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -105,6 +105,6 @@ figcaption {
   display: none;
 }
 
-footer {
-  text-align: right;
+footer p {
+  text-align: right !important;
 }
